lanecwe-Prod/src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Assignment_Date__c</fullName>
        <label>Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECommerce_Account_Number__c</fullName>
        <label>ECommerce Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enterprise Name</label>
        <referenceTo>Offerings__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Name</label>
        <referenceTo>LicenseSet__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Z_Source__c</fullName>
        <label>Z-Source</label>
        <picklist>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesgateway</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
</CustomObject>